--- a/styles.css
+++ b/styles.css
@@ -23,3 +23,18 @@ th, td {
 .gallery-image {
     width: 80px;
 }
+
+p{
+
+}
+
+img {
+	align:left;
+	border: 1px solid #ddd;
+    border-radius: 4px
+    padding:24px;
+}
+
+h2 {
+	text-align: center;
+}
